--- a/EDA_2_0.ipynb
+++ b/EDA_2_0.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -40,7 +40,7 @@
         }
       ],
       "source": [
-        "pip install pandas numpy matplotlib seaborn scikit-learn xgboost"
+        "pip install pandas numpy matplotlib seaborn scikit-learn xgboost statsmodels"
       ]
     },
     {
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "sNWM3NVgb5kc"
       },
