chore: update clean img

--- a/EDA_3_0.ipynb
+++ b/EDA_3_0.ipynb
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
     "    plt.ylim(0.9, 1.01)  # Ajustar según los resultados esperados\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('cross_validation_metrics.png')\n",
+    "#plt.savefig('cross_validation_metrics.png')\n",
     "plt.show()"
    ]
   },
@@ -895,7 +895,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
